--- a/dvbst_backend/package.json
+++ b/dvbst_backend/package.json
@@ -18,6 +18,9 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
+    "uuid": "^8.3.2"
   }
 }
