--- a/dvbst_web_admin/package.json
+++ b/dvbst_web_admin/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "moralis": "^1.7.0",
     "postcss": "^8.4.8",
