--- a/dvbst_backend/package.json
+++ b/dvbst_backend/package.json
@@ -16,11 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
-    "nodemon": "^2.0.15",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
+    "nodemon": "^2.0.15",
+    "twilio": "^3.77.2",
     "uuid": "^8.3.2"
   }
 }
