--- a/dvbst_mobile/package.json
+++ b/dvbst_mobile/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.16.20",
-    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
@@ -20,21 +19,18 @@
     "axios": "^0.27.2",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
-    "expo-cli": "^5.4.9",
     "expo-font": "~10.0.4",
-    "expo-linking": "^3.1.0",
     "expo-status-bar": "~1.2.0",
-    "jwt-decode": "^3.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-cli": "^2.0.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-custom-dropdown": "^1.0.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-element-dropdown": "^1.7.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-otp-inputs": "^7.1.1",
     "react-native-paper": "^4.11.2",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~2.3.1",
