--- a/dvbst_mobile/app.json
+++ b/dvbst_mobile/app.json
@@ -36,12 +36,12 @@
           "data": [
             {
               "scheme": "https",
-              "host": "62a8f852b895971ca483f82f--tubular-churros-16cbaf.netlify.app",
+              "host": "tubular-churros-16cbaf.netlify.app",
               "pathPrefix": "/"
             },
             {
               "scheme": "https",
-              "host": "62a8f852b895971ca483f82f--tubular-churros-16cbaf.netlify.app",
+              "host": "tubular-churros-16cbaf.netlify.app",
               "pathPrefix": "/login/enter"
             }
           ],
