--- a/dvbst_backend/package.json
+++ b/dvbst_backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
@@ -19,10 +20,13 @@
     "generate-password": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "moralis": "^1.8.0",
+    "moralis-admin-cli": "^2.1.16",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "twilio": "^3.77.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3": "^1.7.3"
   }
 }
