--- a/dvbst_web_admin/package.json
+++ b/dvbst_web_admin/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@fontsource/poppins": "^4.5.3",
     "@heroicons/react": "^1.0.6",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
@@ -20,6 +24,7 @@
     "react-icons": "^4.3.1",
     "react-moment": "^1.1.2",
     "react-moralis": "^1.3.5",
+    "react-multi-date-picker": "^3.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
