--- a/dvbst_web/package.json
+++ b/dvbst_web/package.json
@@ -16,9 +16,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
+    "moralis": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-moralis": "^1.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
