--- a/dvbst_mobile/package.json
+++ b/dvbst_mobile/package.json
@@ -35,8 +35,11 @@
     "react-native-element-dropdown": "^1.7.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-picker": "^4.8.4",
+    "react-native-material-menu": "^2.0.0",
     "react-native-paper": "^4.11.2",
     "react-native-picker": "^4.3.7",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
