--- a/dvbst_web/package.json
+++ b/dvbst_web/package.json
@@ -14,10 +14,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "moralis": "^1.8.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-moralis": "^1.4.0",
