--- a/dvbst_web_admin/package.json
+++ b/dvbst_web_admin/package.json
@@ -13,12 +13,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
     "autoprefixer": "^10.4.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "moralis": "^1.7.0",
     "postcss": "^8.4.8",
     "react": "^18.1.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
