--- a/dvbst_web/package.json
+++ b/dvbst_web/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-timer-hook": "^3.0.5",
     "redux-state-sync": "^3.1.2",
     "spinners-react": "^1.0.7",
     "tailwindcss": "^3.0.23",
