--- a/dvbst_web/package.json
+++ b/dvbst_web/package.json
@@ -14,16 +14,19 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "moralis": "^1.8.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-moralis": "^1.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-timer-hook": "^3.0.5",
     "redux-state-sync": "^3.1.2",
     "spinners-react": "^1.0.7",
     "tailwindcss": "^3.0.23",
