--- a/dvbst_web/package.json
+++ b/dvbst_web/package.json
@@ -16,6 +16,9 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
+    "clsx": "^1.1.1",
+    "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "moralis": "^1.8.0",
     "react": "^17.0.2",
@@ -24,13 +27,16 @@
     "react-icons": "^4.4.0",
     "react-moralis": "^1.4.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-timer-hook": "^3.0.5",
+    "react-toastify": "^9.0.5",
     "redux-state-sync": "^3.1.2",
     "spinners-react": "^1.0.7",
     "tailwindcss": "^3.0.23",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
