--- a/dvbst_web_admin/package.json
+++ b/dvbst_web_admin/package.json
@@ -15,11 +15,12 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.3",
     "autoprefixer": "^10.4.2",
+    "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "moralis": "^1.7.0",
     "postcss": "^8.4.8",
-    "react": "^18.1.0",
+    "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "recharts": "^2.1.11",
     "spinners-react": "^1.0.7",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
