--- a/dvbst_backend/package.json
+++ b/dvbst_backend/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.15",
     "twilio": "^3.77.2",
     "uuid": "^8.3.2",
-    "web3": "^1.7.3"
+    "web3": "^1.7.3",
+    "winston": "^3.8.0"
   }
 }
