--- a/dvbst_web_admin/package.json
+++ b/dvbst_web_admin/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "react-timer-hook": "^3.0.5",
     "recharts": "^2.1.11",
     "spinners-react": "^1.0.7",
     "tailwindcss": "^3.0.23",
