--- a/dvbst_backend/.gitignore
+++ b/dvbst_backend/.gitignore
@@ -62,7 +62,7 @@ web_modules/
 # dotenv environment variable files
 .env
 config.js
-dbconnecction.js
+dbconnection.js
 Procfile
 .env.development.local
 .env.test.local
